<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/exit_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="#eeeeee"
                android:onClick="onClickExitButton"
                android:scaleType="centerCrop"
                android:src="@drawable/exit_button_2" />

            <TextView
                android:id="@+id/page_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/page_3"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/help_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="#eeeeee"
                android:onClick="onClickHelpButton"
                android:scaleType="centerCrop"
                android:src="@drawable/help_button" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_3"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/img_3" />

        <RadioGroup
            android:id="@+id/radio_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/renoir" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubens" />

            <RadioButton
                android:id="@+id/gauguin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gauguin" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perov" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hint_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_style"
                android:onClick="onClickHintButton"
                android:text="@string/hint"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_style"
                android:onClick="onClickNextButton"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>