<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/exit_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/exit_button_2"
                android:scaleType="centerCrop"
                android:onClick="onClickExitButton"
                android:background="#eeeeee"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/page_number"
                android:text="@string/page_1"/>

            <ImageButton
                android:id="@+id/help_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/help_button"
                android:scaleType="centerCrop"
                android:onClick="onClickHelpButton"
                android:background="#eeeeee"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_1"
            android:scaleType="centerInside"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radio_group_1">
                <RadioButton
                    android:id="@+id/picasso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picasso" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/klimt"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perov" />
                <RadioButton
                    android:id="@+id/malevich"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/malevich"/>
            </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/hint_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_style"
                android:onClick="onClickHintButton"
                android:text="@string/hint"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_style"
                android:textSize="16sp"
                android:onClick="onClickNextButton"
                android:text="@string/next"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>